2005-03-18  Sven Panne  <sven.panne@aedion.de>

	* linux/Makefile.in, linux/PLATFORM, linux/configure.ac,
	linux/configure.in: Renamed configure.in to configure.ac, the
	former is a misnomer, see the autoconf documentation.

2005-03-15  Sven Panne  <sven.panne@aedion.de>

	* linux/Makefile.in: Make relative versioning links to dynamic
	libraries instead of absolute ones. Among other things, it makes
	it possible to have relocatable packages, which is very nice for
	non-root users.

	* include/AL/alext.h, linux/src/al_main.c, linux/src/al_main.h,
	linux/src/alc/alc_context.c, linux/src/alc/alc_context.h,
	linux/src/extensions/al_ext_vorbis.c: Fixed the const-correctness
	of _alIsZeroVector, _alcSetContext and alutLoadVorbis_LOKI. Note
	that Ogg Vorbis' headers are not const-correct, so we still get a
	warning, this time for the 3rd parameter of ov_open_callbacks,
	which is a const pointer in reality.

	Corrected the first argument of _alcSetContext (ALCint vs. int).

	Removed a few incorrect UNUSED().

	* linux/src/al_source.c: Fixed a signed/unsigned comparison
	warning.

	* linux/src/al_source.c, linux/src/arch/alsa/alsa.c,
	linux/src/arch/arts/arts.c, linux/src/arch/esd/esd.c:
	Removed/#if'd a few unused variables.

	* linux/src/arch/alsa/alsa.c: Synchronized the type of
	psnd_pcm_hw_params_get_period_size with the corresponding ALSA 1.x
	prototype.

	ALSA versioning is still handled incorrectly when
	OPENAL_DLOPEN_ALSA is defined: Consider the case when e.g. the
	library was compiled against a 1.x ALSA (i.e. SND_LIB_MAJOR != 0),
	but at runtime dlvsym() finds a ALSA_0.9.0rc4 version of a given
	function. The function is then still called like it has a 1.x
	signature, leading to incorrect parameter passing.

	The right way to handle this versionitis would be to remember
	which version was found and use the corresponding interface
	later. If only an unversioned symbol could be found, assuming the
	1.x signature is probably the right thing nowadays.
